# gtest-example

./: .gitignore  README.md
src/: CMakeLists.txt  Calculator.cpp  Calculator.h  main.cpp
test/: CMakeLists.txt  CMakeSettings.json  tests.cpp
